Added a RadioFrequency transmitter for the Raspberry Pi. The user can now have the Raspberry Pi transmit 433Mhz signals (given that the user properly set up a breadboard with the right components). I also added an interface so that the user can transmit via the Webserver.
Added TCGlobals; module aimed at providing global-level functions and variables.

Renamed TCEnumerations (The Chiem) to allow more general enumerations.

Added device type checking for device-specific operations (in our case, we want the raspberry pi to import the correct Pi Libraries such as GPIO and picam)

Changed CVCam to be a class in itself; In order to instantiate, you must call the factory functions. This makes it so that it is still treated as a singleton object, but the variables wouldn't be reinitialized during each module import.

--- a/templates/index.html
+++ b/templates/index.html
@@ -101,20 +101,43 @@
         function handle_operation_selection(cv_operation) {
             $('#notify_on_motion')[0].disabled = true;
 
-            if (cv_operation == {{RAW_IMAGE}})
+            if (cv_operation == {{
+                CV_RAW_IMAGE
+            }
+        })
                 $('#operation_raw')[0].selected = true
-            else if (cv_operation == {{FACE_DETECTION}})
+        else
+            if (cv_operation == {{
+                CV_FACE_DETECTION
+            }
+        })
                 $('#operation_face')[0].selected = true
-            else if (cv_operation == {{MOTION_DETECTION}})
+        else
+            if (cv_operation == {{
+                CV_MOTION_DETECTION
+            }
+        })
             {
                 $('#operation_motion')[0].selected = true;
                 $('#notify_on_motion')[0].disabled = false;
             }
-            else if (cv_operation == {{CANNY_EDGE_DETECTION}})
+        else
+            if (cv_operation == {{
+                CV_CANNY_EDGE_DETECTION
+            }
+        })
                 $('#operation_canny_edge')[0].selected = true
-            else if (cv_operation == {{CORNER_DETECTION}})
+        else
+            if (cv_operation == {{
+                CV_CORNER_DETECTION
+            }
+        })
                 $('#operation_corner')[0].selected = true
-            else if (cv_operation == {{KEYPOINT_DETECTION}})
+        else
+            if (cv_operation == {{
+                CV_KEYPOINT_DETECTION
+            }
+        })
                 $('#operation_keypoint')[0].selected = true
         }
 
